# unifres

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI_AUDIT.md  GITHUB_PAGES_SETUP.md  NEWS.md  README.md  codecov.yml
.github/workflows/: R-CMD-check.yml  python-tests.yml  quarto-publish.yml  test-coverage.yml
archive/: examples-python.qmd.bak
archive/funres/: DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  funres.Rproj
archive/funres/R/: ffplot.R  fredplot.R  fresiduals.R  utils.R
archive/funres/man/: ffplot.Rd  fredplot.Rd  fresiduals.Rd  funres-package.Rd
archive/funres/manuscript/: manuscript.Rmd
archive/funres/vignettes/articles/: intro.Rmd
archive/pyfunres/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
archive/pyfunres/docs/: Makefile  conf.py  example.ipynb  make.bat
archive/pyfunres/funres/: __init__.py  unifend.py
archive/pyfunres/tests/: test_funres.py
docs/: _quarto.yml  _quartodoc.yml  contributing.qmd  examples-python.ipynb  examples-python.qmd  examples-r.qmd  index.qmd  installation.qmd  methodology.qmd  objects.json  quickstart.qmd
docs/_freeze/test_output/execute-results/: html.json
docs/_site/: contributing.html  examples-python.html  examples-r.html  index.html  installation.html  methodology.html  quickstart.html  search.json
docs/_site/reference_python/: ffplot.html  fredplot.html  fresiduals.html  index.html  utils.expand_endpoints.html  utils.is_fitted.html  utils.unifend.html
docs/_site/reference_r/: index.html
docs/reference_python/: ffplot.qmd  fredplot.qmd  fresiduals.qmd  index.qmd  utils.expand_endpoints.qmd  utils.is_fitted.qmd  utils.unifend.qmd
docs/reference_r/: index.qmd
examples/: bike_sharing.ipynb
python/: LICENSE  README.md  pyproject.toml
python/docs/: changelog.md
python/examples/: simple_test.py
python/src/unifres/: __init__.py  plots.py  residuals.py  utils.py
python/test_venv/: pyvenv.cfg
python/tests/: test_residuals.py  test_utils.py
r/unifres/: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
r/unifres/R/: ffplot.R  fredplot.R  fresiduals.R  unifres-package.R  utils.R
r/unifres/man/: ffplot.Rd  fredplot.Rd  fresiduals.Rd  unifend.Rd  unifres-package.Rd
r/unifres/tests/: testthat.R
r/unifres/tests/testthat/: test-fresiduals.R  test-models.R  test-plots.R  test-utils.R
r/unifres/vignettes/: intro.Rmd
r/unifres/vignettes/articles/: intro.Rmd
