[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifres"
version = "0.1.0"
authors = [
    { name = "Brandon Greenwell", email = "greenwell.brandon@gmail.com" },
    { name = "Dungang Liu", email = "dungang.liu@uc.edu" },
    { name = "Zewei Lin", email = "pqt19@txstate.edu" },
    { name = "Heping Zhang", email = "heping.zhang@yale.edu" }
]
description = "A unified framework for residual diagnostics in generalized linear models and beyond."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotnine>=0.10.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "quartodoc>=0.7.0"
]

[project.urls]
Homepage = "https://github.com/bgreenwell/unifres"
"Bug Tracker" = "https://github.com/bgreenwell/unifres/issues"