[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifres"
version = "0.1.1"
authors = [
    { name = "Brandon Greenwell", email = "greenwell.brandon@gmail.com" },
    { name = "Dungang Liu", email = "dungang.liu@uc.edu" },
    { name = "Zewei Lin", email = "pqt19@txstate.edu" },
]
description = "A unified framework for residual diagnostics in generalized linear models and beyond."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotnine>=0.10.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "quartodoc>=0.7.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bgreenwell/unifres"
"Bug Tracker" = "https://github.com/bgreenwell/unifres/issues"
